--- a/docs/TeXFiles/110_Anhang.tex
+++ b/docs/TeXFiles/110_Anhang.tex
@@ -155,3 +155,107 @@
     \end{subfigure}
     \caption[]{Ergebnisse Multi-Run ohne Überprüfung der Eigenkollision (Fortsetzung)}
 \end{figure}
+
+\clearpage
+
+\section{Ergebnisse Multi-Run Pick-And-Place MIT Überprüfung der Eigenkollision}
+\label{sec:pp_erg_multiRun_SelfCheck}
+% --- TEIL 1 ---
+\begin{figure}[H]
+    \centering
+    \begin{subfigure}[b]{0.48\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{Figures/png/Empty_World_benchmark_pickPlace_multiRun_SelfChek.png}
+        \caption{Empty World}
+        \label{fig:pp_empty_world_bench_multi}
+    \end{subfigure}
+    \hfill
+    \begin{subfigure}[b]{0.48\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{Figures/png/The_Wall_benchmark_pickPlace_multiRun_SelfCheck.png}
+        \caption{The Wall}
+        \label{fig:pp_the_wall_bench_multi}
+    \end{subfigure}
+    
+    \vspace{1em}
+    
+    \begin{subfigure}[b]{0.48\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{Figures/png/Narrow_Passage_benchmark_pickPlace_multiRun_SelfCheck.png}
+        \caption{Narrow Passage}
+        \label{fig:pp_narrow_passage_bench_multi}
+    \end{subfigure}
+    \hfill
+    \begin{subfigure}[b]{0.48\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{Figures/png/Forest_benchmark_pickPlace_multiRun_SelfCheck.png}
+        \caption{Forest}
+        \label{fig:pp_forest_bench_multi}
+    \end{subfigure}
+    \caption{Ergebnisse Multi-Run Pick-And-Place mit Überprüfung der Eigenkollision}
+\end{figure}
+
+% --- TEIL 2 ---
+\begin{figure}[H]
+    \ContinuedFloat
+    \centering
+    \begin{subfigure}[b]{0.48\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{Figures/png/Shelf_Reach_benchmark_pickPlace_multiRun_SelfCheck.png}
+        \caption{Shelf Reach}
+        \label{fig:pp_shelf_reach_bench_multi}
+    \end{subfigure}
+    \caption[]{Ergebnisse Multi-Run Pick-And-Place mit Überprüfung der Eigenkollision (Fortsetzung)}
+\end{figure}
+
+\clearpage
+
+\section{Ergebnisse Multi-Run Pick-And-Place OHNE Überprüfung der Eigenkollision}
+\label{sec:pp_erg_multiRun_noSelfCheck}
+% --- TEIL 1 ---
+\begin{figure}[H]
+    \centering
+    \begin{subfigure}[b]{0.48\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{Figures/png/Empty_World_benchmark_pickPlace_multiRun_noSelfCheck.png}
+        \caption{Empty World}
+        \label{fig:pp_empty_world_bench_multi_noSelfCheck}
+    \end{subfigure}
+    \hfill
+    \begin{subfigure}[b]{0.48\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{Figures/png/The_Wall_benchmark_pickPlace_multiRun_noSelfCheck.png}
+        \caption{The Wall}
+        \label{fig:pp_the_wall_bench_multi_noSelfCheck}
+    \end{subfigure}
+    
+    \vspace{1em}
+    
+    \begin{subfigure}[b]{0.48\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{Figures/png/Narrow_Passage_benchmark_pickPlace_multiRun_noSelfCheck.png}
+        \caption{Narrow Passage}
+        \label{fig:pp_narrow_passage_bench_multi_noSelfCheck}
+    \end{subfigure}
+    \hfill
+    \begin{subfigure}[b]{0.48\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{Figures/png/Forest_benchmark_pickPlace_multiRun_noSelfCheck.png}
+        \caption{Forest}
+        \label{fig:pp_forest_bench_multi_noSelfCheck}
+    \end{subfigure}
+    \caption{Ergebnisse Multi-Run Pick-And-Place ohne Überprüfung der Eigenkollision}
+\end{figure}
+
+% --- TEIL 2 ---
+\begin{figure}[H]
+    \ContinuedFloat
+    \centering
+    \begin{subfigure}[b]{0.48\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{Figures/png/Shelf_Reach_benchmark_pickPlace_multiRun_noSelfCheck.png}
+        \caption{Shelf Reach}
+        \label{fig:pp_shelf_reach_bench_multi_noSelfCheck}
+    \end{subfigure}
+    \caption[]{Ergebnisse Multi-Run Pick-And-Place ohne Überprüfung der Eigenkollision (Fortsetzung)}
+\end{figure}
