Modified little bit

--- a/docs/TeXFiles/004_Acronyms.tex
+++ b/docs/TeXFiles/004_Acronyms.tex
@@ -5,6 +5,6 @@
 	\acro{LazyPRM}{Lazy Probabilistic Roadmap Method}
 	\acro{VisibilityPRM}{Visibility Probabilistic Roadmap Method}
 	\acro{PRM}{Probabilistic Roadmap Method}
-	\acro{LE}{Längeneinheit}
+	\acro{LE}{\mbox{Längeneinheit(en)}}
 \end{acronym}
 %% End of File %%
